@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.4 2005/02/24 12:14:07 agc Exp $
+$NetBSD: distinfo,v 1.5 2005/03/04 15:43:55 uebayasi Exp $
 
-SHA1 (wol-0.7.0.tar.gz) = b261b284ed777934f04d58f587c9395320ff3f01
-RMD160 (wol-0.7.0.tar.gz) = bd53331c29f6264252f09ad5e36ffb49e30c80b1
-Size (wol-0.7.0.tar.gz) = 388139 bytes
+SHA1 (wol-0.7.1.tar.gz) = 7edd1a8c2d4baffc3b6baf8fcd12e786f9fc1fbd
+RMD160 (wol-0.7.1.tar.gz) = 856fefe482db4326df47f10f07ec97396f23870d
+Size (wol-0.7.1.tar.gz) = 445648 bytes
